# OpenGLLearn

./: .gitattributes  .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/include/: cube.hpp  plane.hpp
app/src/: cube.cpp  main.cpp  plane.cpp
assets/shaders/: OutlinePost.fs  SingleColor.fs  fullscreen.fs  fullscreen.vs  object.fs
assets/shaders/exp/: object.fs  object.vs
assets/shaders/exp1/: object.fs
docs/SHADER/exp1/: light.fs  object.fs
engine/: CMakeLists.txt
engine/include/core/: camera.hpp
engine/include/core/Config/: global.hpp
engine/include/core/Utils/: uti.hpp
engine/include/graphics/: mesh.hpp
engine/include/render/: GeometryPass.hpp  OutlinePass.hpp  RenderPass.hpp  material.hpp  renderer.hpp  shader.hpp
engine/include/render/pass/: FinalPass.hpp  GeometryPass.hpp  OutlinePass.hpp  RenderPass.hpp
engine/include/resource/: model.hpp  read_obj.hpp  texture.hpp
engine/include/scene/: renderable.hpp
engine/include/scene/Lighting/: LightManager.hpp  light.hpp
engine/src/core/: camera.cpp
engine/src/core/Config/: global.cpp
engine/src/core/Utils/: stb_image.cpp  uti.cpp
engine/src/graphics/: mesh.cpp
engine/src/render/: GeometryPass.cpp  OutlinePass.cpp  material.cpp  renderer.cpp  shader.cpp
engine/src/render/pass/: FinalPass.cpp  GeometryPass.cpp  OutlinePass.cpp  RenderPass.cpp
engine/src/resource/: model.cpp  read_obj.cpp  texture.cpp
engine/src/scene/: renderable.cpp
engine/src/scene/Lighting/: LightManager.cpp  light.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: global.hpp  uti.hpp
include/CORE/: material.hpp  mesh.hpp  renderable.hpp
include/CUBE/: cube.hpp  light.hpp
include/GRAPHICS/: shader.hpp
include/MANAGER/: LightManager.hpp
src/: camera.cpp  cube.cpp  global.cpp  light.cpp  main.cpp  read_obj.cpp  stb_image.cpp  uti.cpp
src/CORE/: material.cpp  mesh.cpp  renderable.cpp
src/CUBE/: light.cpp
src/GRAPHICS/: shader.cpp
src/MANAGER/: LightManager.cpp
